Fix horizontal scrolling, oops.

--- a/assets/styles/_header.scss
+++ b/assets/styles/_header.scss
@@ -156,7 +156,6 @@
 
 		--optical--shift: calc(var(--pagination--size) / 3);
 
-		align-items:      center;
 		display:          flex;
 		flex-direction:   column;
 		gap:              calc(var(--pagination--size) * 1.25);
@@ -173,13 +172,14 @@
 		}
 
 		&:before { // Cover for brief icon overlaps.
-			-webkit-mask-image: linear-gradient(black 66%, transparent); // Ironically, this prefix is for Chrome.
+			-webkit-mask-image: linear-gradient(black 75%, transparent); // Ironically, this prefix is for Chrome.
 			content:            '';
 			display:            block;
 			height:             calc(var(--pagination--size) * 5.5 + var(--optical--shift) + 2 * var(--margin--vertical) / var(--logo--scale));
 			position:           absolute;
+			right:              calc(-1 * var(--margin));
 			top:                calc(-1 * var(--margin--vertical) / var(--logo--scale) - var(--optical--shift));
-			width:              calc(2 * var(--margin) / var(--logo--scale) + var(--pagination--size));
+			width:              calc(2 * var(--margin) + var(--pagination--size));
 		}
 
 		> li {
